--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,10 +1,11 @@
 {
-    "/js/vendor.js": "/js/vendor.js?id=edc417caa2117c9311da",
-    "/css/app.css": "/css/app.css?id=4151cf6261b95f07227e",
-    "/js/app.js": "/js/app.js?id=7cce4ed1e730bb10a53a",
+    "/js/vendor.js": "/js/vendor.js?id=c599c6743c7bad6d93a6",
+    "/js/app.js": "/js/app.js?id=b71c8413d106f6a0f085",
+    "/js/disciplina.js": "/js/disciplina.js?id=32f6c5ea60951e51922d",
     "/js/adminlte.js": "/js/adminlte.js?id=27c4358ace203c201c41",
-    "/css/bootstrap.css": "/css/bootstrap.css?id=82252d754417f95f7779",
+    "/css/bootstrap.css": "/css/bootstrap.css?id=78741621eaee42bace4d",
     "/css/select2.css": "/css/select2.css?id=fd9fe49d3d919d631d3e",
     "/css/fonts.css": "/css/fonts.css?id=0ff9b3d1902637f31598",
-    "/css/adminlte.css": "/css/adminlte.css?id=77aa50154a2c316ab182"
+    "/css/adminlte.css": "/css/adminlte.css?id=77aa50154a2c316ab182",
+    "/css/bootstrap.css.map": "/css/bootstrap.css.map?id=b2f407b1aa09ede22e8a"
 }
