--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,8 @@ APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
-
-   
+LOG_SLACK_WEBHOOK_URL=http://localhost:9200/education/education
+LOG_SLACK_URL=http://localhost:9200/education/education
 
 DB_CONNECTION=mysql
 DB_HOST=localhost
@@ -16,10 +16,11 @@ DB_USERNAME=teste
 DB_PASSWORD=teste
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=database 
-SESSION_DRIVER=file
+CACHE_DRIVER=redis  
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
-QUEUE_DRIVER=sync
+QUEUE_DRIVER=redis
+1QUEUE_DRIVER=database
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
