--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,7 @@ CACHE_DRIVER=redis
 SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 QUEUE_DRIVER=redis
+2QUEUE_DRIVER=sync
 1QUEUE_DRIVER=database
 
 REDIS_HOST=127.0.0.1
