--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "predis/predis": "^1.1",
+        "tymon/jwt-auth": "^1.0.0-rc.2",
         "yajra/laravel-datatables-oracle": "^8.3"
     },
     "require-dev": {
