--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,9 +1,10 @@
 {
     "/js/vendor.js": "/js/vendor.js?id=c581dd0b367a0c8d4040",
-    "/js/app.js": "/js/app.js?id=f865ef4763e67962efb9",
+    "/js/app.js": "/js/app.js?id=e07d834184a8a3d2de9e",
     "/js/perfil.js": "/js/perfil.js?id=1faafb39c5e6434dfec7",
     "/js/usuario.js": "/js/usuario.js?id=b7a2a30ef1485ef23ac9",
     "/js/permissao.js": "/js/permissao.js?id=7eb371ff5209591c7fff",
+    "/js/profile.js": "/js/profile.js?id=7fea8151e781da376a8d",
     "/css/bootstrap.css": "/css/bootstrap.css?id=78741621eaee42bace4d",
     "/css/select2.css": "/css/select2.css?id=fd9fe49d3d919d631d3e",
     "/css/fonts.css": "/css/fonts.css?id=0ff9b3d1902637f31598",
