--- a/.env.example
+++ b/.env.example
@@ -1,38 +1,53 @@
-APP_NAME=Laravel
+APP_NAME=SGPM-TEMPLATE
 APP_ENV=local
 APP_KEY=base64:BbwBPapX39usSwsj+M3TYp0nN5u66QVlaR38TUyADK0=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://sgpm.edu.desenvolvimento/
+
+APP_URL_LOGIN_BAON=http://sgpm.edu.desenvolvimento/api/login
 
 LOG_CHANNEL=stack
-LOG_SLACK_WEBHOOK_URL=http://localhost:9200/education/education
-LOG_SLACK_URL=http://localhost:9200/education/education
+
+LOG_ELASTIC_LOG=true
+LOG_ELASTIC_SEARCH_URL=http://localhost:9200/education/education
+
+DB_CONNECTION=pgsql
+DB_HOST=localhost
+DB_PORT=5432
+DB_DATABASE=template
+DB_USERNAME=bruno
+DB_PASSWORD=vencioneck
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_PORT=3306
+DB_DATABASE=teste
+DB_USERNAME=teste
+DB_PASSWORD=teste
+
+DB_CONNECTION=mysql
 DB_PORT=3306
 DB_DATABASE=teste
 DB_USERNAME=teste
 DB_PASSWORD=teste
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=redis  
-SESSION_DRIVER=redis
+CACHE_DRIVER=database  
+SESSION_DRIVER=database
 SESSION_LIFETIME=120
-QUEUE_DRIVER=redis
+1QUEUE_DRIVER=redis
 2QUEUE_DRIVER=sync
-1QUEUE_DRIVER=database
+QUEUE_DRIVER=database
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=man@gmail.com
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=tls
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
@@ -41,3 +56,5 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+JWT_SECRET=2CgU6QzbGWibNznWkgs2cCO1cXOdy54X
