--- a/package.json
+++ b/package.json
@@ -11,24 +11,25 @@
     },
     "devDependencies": {
         "axios": "^0.18",
-        "bootstrap": "^4.1.2",
+        "bootstrap": "^4.1.3",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
-        "popper.js": "^1.12",
-        "vue": "^2.5.7"
+        "popper.js": "^1.14.4",
+        "vue": "^2.5.17"
     },
     "dependencies": {
         "admin-lte": "^3.0.0-alpha.2",
         "d": "^1.0.0",
         "datatables.net": "^1.10.19",
         "datatables.net-bs": "^1.10.19",
-        "ionicons": "^4.2.4",
+        "ionicons": "^4.3.0",
         "izitoast": "^1.3.0",
         "moment": "^2.22.2",
         "select2": "^4.0.6-rc.1",
-        "sweetalert2": "^7.25.3",
-        "vue-router": "^3.0.1"
+        "sweetalert2": "^7.26.10",
+        "vue-router": "^3.0.1",
+        "vue-template-compiler": "^2.5.17"
     }
 }
