--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,7 +2,8 @@
     "/js/vendor.js": "/js/vendor.js?id=74f052c59a458eb4d0ea",
     "/js/app.js": "/js/app.js?id=077af49000a95acbe8ef",
     "/js/perfil.js": "/js/perfil.js?id=084acf06f8653a542c3b",
-    "/js/usuario.js": "/js/usuario.js?id=b2311bb7ab4423e2495a",
+    "/js/usuario.js": "/js/usuario.js?id=1de3a047b0aacabcc17a",
+    "/js/tranferirPerfil.js": "/js/tranferirPerfil.js?id=be3337c8e730b04bb4d5",
     "/js/permissao.js": "/js/permissao.js?id=d9b543569a7a91be9a4d",
     "/js/profile.js": "/js/profile.js?id=47cb74ecef74a714a80f",
     "/css/bootstrap.css": "/css/bootstrap.css?id=e2aa2ac70762fdaab70a",
