--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -9,5 +9,8 @@
     "/css/bootstrap.css": "/css/bootstrap.css?id=e2aa2ac70762fdaab70a",
     "/css/select2.css": "/css/select2.css?id=fd9fe49d3d919d631d3e",
     "/css/fonts.css": "/css/fonts.css?id=fba04555e8676937903a",
-    "/css/bootstrap.css.map": "/css/bootstrap.css.map?id=0ab7c5a3c60c431b89b5"
+    "/css/bootstrap.css.map": "/css/bootstrap.css.map?id=0ab7c5a3c60c431b89b5",
+    "/css/adminlte.css": "/css/adminlte.css?id=786d4dae6b981e441fa2",
+    "/css/adminlte.css.map": "/css/adminlte.css.map?id=bafe584086c239667abf",
+    "/js/adminlte.js": "/js/adminlte.js?id=7fbfc5e71e6352224593"
 }
