--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
         "datatables.net-bs": "^1.10.19",
         "ionicons": "^4.3.0",
         "izitoast": "^1.3.0",
+        "laravel-echo": "^1.4.0",
         "moment": "^2.22.2",
         "select2": "^4.0.6-rc.1",
+        "socket.io-client": "^2.1.1",
         "sweetalert2": "^7.26.10",
         "vue-router": "^3.0.1",
         "vue-template-compiler": "^2.5.17"
