--- a/.env.example
+++ b/.env.example
@@ -2,14 +2,23 @@ APP_NAME=SGPM-TEMPLATE
 APP_ENV=local
 APP_KEY=base64:BbwBPapX39usSwsj+M3TYp0nN5u66QVlaR38TUyADK0=
 APP_DEBUG=true
-APP_URL=http://sgpm.edu.desenvolvimento/
+APP_URL=http://127.0.0.1:8000/
 
-APP_URL_LOGIN_BAON=http://sgpm.edu.desenvolvimento/api/login
+APP_URL_LOGIN_BAON=http://127.0.0.1:8000/admin/login
 
 LOG_CHANNEL=stack
 
 LOG_ELASTIC_LOG=true
-LOG_ELASTIC_SEARCH_URL=http://localhost:9200/education/education
+LOG_ELASTIC_SEARCH_URL=http://10.243.22.13:9200/education/education
+
+
+
+DB_CONNECTION=mysql
+DB_PORT=3306
+DB_DATABASE=teste
+DB_USERNAME=teste
+DB_PASSWORD=teste
+
 
 DB_CONNECTION=pgsql
 DB_HOST=localhost
@@ -18,17 +27,7 @@ DB_DATABASE=template
 DB_USERNAME=bruno
 DB_PASSWORD=vencioneck
 
-DB_CONNECTION=mysql
-DB_PORT=3306
-DB_DATABASE=teste
-DB_USERNAME=teste
-DB_PASSWORD=teste
 
-DB_CONNECTION=mysql
-DB_PORT=3306
-DB_DATABASE=teste
-DB_USERNAME=teste
-DB_PASSWORD=teste
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=database  
@@ -43,11 +42,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
-MAIL_USERNAME=man@gmail.com
+MAIL_HOST=smtp..es.gov.br
+MAIL_PORT=25
+MAIL_USERNAME=.@pm.es.gov.br
 MAIL_PASSWORD=
-MAIL_ENCRYPTION=tls
+MAIL_ENCRYPTION=
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
